# NinjaCompilerLab

./: README.md  mknjvm  njvm
src/: .debug.h.swp  CMakeLists.txt  debug.c  debug.h  main  main.c  structs.h  support.c
src/bigint/src/: bigint.c  support.h
src/bigint/tst/: support.c
src/uebungen/: listrev.asm  matinv.asm  prog10.asm  prog11.asm  prog12.asm  twodim.asm
